# EISPCSAI

./: .gitignore  Dockerfile  README.md  compose.yaml  hello.py  pyproject.toml
notebooks/: tsne_visualization.ipynb  tsne_visualization_rcpd.ipynb
old/: dataloader.py  datasets.py
old/model/: feature_multiple.py  itamodel.py
rcpd/: fill_with_random_images.ipynb  process_rcpd_csv.ipynb
src/: controller.py  dataloader.py  datasets.py  download_models.py  eval_ensemble.py  extract_features.py  itamodel.py  main.py  model.py  proxy_tasks.py  utils.py  visualizations.py
src/model/: __init__.py  download.py  ensemble.py  feature_multiple.py  feature_separate.py  feature_single.py  process_features.py  separate.py  thamirismodel.py
src/model_scripts/: thamirismodel.py
