[project]
name = "ecsaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "mtcnn>=1.0.0",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "ruff>=0.11.2",
    "scikit-image>=0.25.2",
    "tensorflow==2.11",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "transformers>=4.50.0",
    "ultralytics>=8.3.133",
    "wget>=3.2",
    "xgboost>=2.1.4",
]
